extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass


func _on_new_game_pressed() -> void:
	get_tree().change_scene_to_file("uid://3sqp1m0iowsi")


func _on_quit_game_pressed() -> void:
	pass # Replace with function body.


func _on_options_pressed() -> void:
	pass # Replace with function body.
